plugins {
    id 'java'
    id 'org.springframework.boot' version '2.7.9'
    id 'io.spring.dependency-management' version '1.0.15.RELEASE'
    id 'com.google.cloud.tools.jib' version '3.1.4'
}

group 'ecsimsw-blog'
version 'latest'
sourceCompatibility = '17'

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
}

dependencies {

    // Spring
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-test'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-cache'

    // Prometheus
    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'

    // Google Guava
    implementation 'com.google.guava:guava:33.0.0-jre'

    // Caffeine
    implementation 'com.github.ben-manes.caffeine:caffeine'

    // Slack alert
    implementation 'com.slack.api:slack-api-client:1.6.2'

    // ShutDown
    implementation 'com.github.ecsimsw:api-shutdown:javax-0.0.5'

    // Mysql
    runtimeOnly 'com.mysql:mysql-connector-j'

    // Jsoup
    implementation 'org.jsoup:jsoup:1.14.2'

    // H2
    implementation 'com.h2database:h2:1.4.199'
    testRuntimeOnly 'com.h2database:h2:1.4.199'

    // Model metadata
    implementation 'org.hibernate:hibernate-jpamodelgen'
    annotationProcessor 'org.hibernate:hibernate-jpamodelgen'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'
}

test {
    useJUnitPlatform()
}

jib {
    from.image = "openjdk:17-jdk-alpine"
    to.image = "ghcr.io/ecsimsw/blog"
    to.tags = ["prod"]
    container {
        jvmFlags = ['-Dspring.profiles.active=prod', '-XX:NewRatio=2', '-XX:SurvivorRatio=8', '-XX:MaxRAMPercentage=25']
    }
}
